Improve responsiveness in footer

--- a/aerolinksma/templates/partials/footer.html
+++ b/aerolinksma/templates/partials/footer.html
@@ -2,7 +2,7 @@
 <footer class="d-print-none">
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-md">
                 <div>
                     <img alt="Logo" src="{% static 'logo.svg' %}"
                          width="36" height="36" />
@@ -15,7 +15,7 @@
                 </p>
             </div>
 
-            <div class="col">
+            <div class="col-md">
                 <h5>Contact Us</h5>
 
                 <ul class="list-unstyled">
@@ -27,7 +27,7 @@
                 </ul>
             </div>
 
-            <div class="col">
+            <div class="col-md">
                 <h5>About</h5>
 
                 <ul class="list-unstyled">
