--- a/aerolinksma/templates/shuttle/index.html
+++ b/aerolinksma/templates/shuttle/index.html
@@ -86,7 +86,7 @@
                     <div class="card-body">
                         <h3 class="card-title">Pricing table</h3>
 
-                        <table class="pricing table table-sm table-borderless table-hover">
+                        <table class="pricing-sm table table-sm table-borderless table-hover">
                             <thead>
                                 <tr>
                                     <th scope="row"></th>
@@ -103,7 +103,7 @@
                             </tbody>
                         </table>
 
-                        <a href="#">
+                        <a href="{% url 'pricing' %}">
                             See full pricing table
                         </a>
                     </div>
