--- a/aerolinksma/templates/partials/navbar.html
+++ b/aerolinksma/templates/partials/navbar.html
@@ -19,7 +19,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{% url 'pricing' %}">
                     Pricing
                 </a>
             </li>
