--- a/aerolinksma/templates/partials/footer.html
+++ b/aerolinksma/templates/partials/footer.html
@@ -37,7 +37,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="{% url 'pricing' %}">
                             Pricing
                         </a>
                     </li>
