--- a/aerolinksma/assets/scss/_nav.scss
+++ b/aerolinksma/assets/scss/_nav.scss
@@ -30,7 +30,7 @@ body {
         font-weight: 600;
     }
 
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(lg) {
         background: $white;
         border: 1px solid $gray-300;
         border-radius: $border-radius;
