--- a/aerolinksma/templates/shuttle/index.html
+++ b/aerolinksma/templates/shuttle/index.html
@@ -36,7 +36,7 @@
 
     <div class="container mb-3 mb-md-5 mt-n5">
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-lg-7">
                 <div class="card reservation-form shadow-sm">
                     <div class="card-body">
                         <h3 class="card-title mt-0 mb-3">
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="col d-none d-md-block">
+            <div class="col-lg d-none d-md-block">
                 <div class="card mb-3">
                     <div class="card-body">
                         <h3 class="card-title">Pricing table</h3>
