--- a/aerolinksma/templates/shuttle/index.html
+++ b/aerolinksma/templates/shuttle/index.html
@@ -142,5 +142,5 @@
 {% block scripts %}
     {{ block.super }}
     {{ places_prices|json_script:"places-prices" }}
-    <script src="{% static 'dist/js/reservation_form.bundle.js' %}"></script>
+    <script src="{% static 'dist/js/reservation_form.bundle.js' %}" defer></script>
 {% endblock %}
