--- a/aerolinksma/templates/shuttle/reservation_detail.html
+++ b/aerolinksma/templates/shuttle/reservation_detail.html
@@ -21,6 +21,18 @@
                     ago
                 </small>
 
+                <div class="mt-2">
+                    {% if object.is_assigned %}
+                        <span class="badge badge-primary">
+                            Assigned to <strong>{{ object.driver }}</strong>
+                        </span>
+                    {% else %}
+                        <span class="badge badge-light">
+                            Not assigned
+                        </span>
+                    {% endif %}
+                </div>
+
                 <div class="list-detail-block">
                     <ul class="list-group list-group-horizontal-md">
                         <li class="list-group-item list-detail-item">
@@ -134,6 +146,26 @@
                         {% endif %}
                     </ul>
                 </div>
+
+                <form class="mb-3" method="post"
+                      action="{% url 'shuttle:reservation-edit' object.pk %}">
+                    {% csrf_token %}
+                    <div class="form-group row">
+                        <label class="col-sm-3 col-form-label text-sm-right" for="id_driver">
+                            Assign to driver:
+                        </label>
+
+                        <div class="col-sm-6 mb-2">
+                            {{ reservation_assign_form.driver }}
+                        </div>
+
+                        <div class="col-sm-3">
+                            <button class="btn btn-primary btn-block">Assign</button>
+                        </div>
+                    </div>
+                </form>
+
+                <hr />
 
                 {% if not object.paid %}
                     <form action="{% url 'shuttle:reservation-mark-as-paid' object.pk %}"
