--- a/aerolinksma/templates/shuttle/admin_reservations.html
+++ b/aerolinksma/templates/shuttle/admin_reservations.html
@@ -85,7 +85,7 @@
 
                 <h3>Next reservations to return</h3>
 
-                <ul class="list-group">
+                <ul class="list-group mb-3">
                     {% for reservation in next_reservations_to_return %}
                         <a class="list-group-item list-group-item-action"
                            href="{{ reservation.get_absolute_url }}">
@@ -104,6 +104,41 @@
                                 In
                                 {{ reservation.return_date|timeuntil }}
                             </small>
+                        </a>
+                    {% endfor %}
+                </ul>
+
+                <h3>Recently passed reservations</h3>
+
+                <ul class="list-group mb-3">
+                    {% for reservation in recently_passed_reservations %}
+                        <a class="list-group-item list-group-item-action"
+                           href="{{ reservation.get_absolute_url }}">
+                            <h6 class="mb-0">
+                                {{ reservation.place.name }}
+                                {{ reservation.get_direction_display }},
+                                {{ reservation.get_id }}
+                                {% if not reservation.paid %}
+                                    <span class="badge">
+                                        Not paid
+                                    </span>
+                                {% endif %}
+                            </h6>
+
+                            <small title="{{ reservation.pickup_date|date:'r' }}">
+                                {{ reservation.pickup_date|timesince }}
+                                ago
+                            </small>
+
+                            {% if reservation.is_assigned %}
+                                <span class="badge badge-primary">
+                                    Assigned to {{ reservation.driver }}
+                                </span>
+                            {% else %}
+                                <span class="badge badge-light">
+                                    Not assigned
+                                </span>
+                            {% endif %}
                         </a>
                     {% endfor %}
                 </ul>
